<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/first"
            android:icon="@drawable/ic_add_circle_outline_48pt_3x"
            android:title="@string/all_tasks" />

        <item
            android:id="@+id/second"
            android:icon="@drawable/ic_done_48pt_3x"
            android:title="@string/add_task" />

        <item
            android:id="@+id/third"
            android:icon="@drawable/ic_cloud_done_48pt_3x"
            android:title="@string/my_tasks" />
        <item
            android:id="@+id/fourth"
            android:icon="@drawable/ic_notifications_none_black_48dp"
            android:title="@string/notification" />

    </group>



</menu>
