<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateTaskAmout">

    <View
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/gradient_back_180"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>



        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_margin="16dp"
            android:layout_gravity="center"
            android:layout_height="match_parent"
            app:cardCornerRadius="16dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTextLight"
                    android:layout_margin="8dp"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:text="@string/step_4_5_title"/>

                <TextView
                    android:id="@+id/textstep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:textColor="@color/colorPrimaryGrey"
                    android:gravity="center"
                    android:text="@string/step_4_5"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/createAmout_buttonleft"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:elevation="1dp"
                    android:textColor="@color/colorBackgrndFrg"
                    android:text="@string/my_amout"
                    android:background="@drawable/circle_button_left_solid"/>

                <TextView
                    android:id="@+id/createAmout_buttonright"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:elevation="1dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/colorTextGrad"
                    android:text="@string/his_amout"
                    android:background="@drawable/circle_button_right"/>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/texthisprice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:text="@string/his_price_only"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/amout_text_input"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_gravity="center"
                    app:boxStrokeColor="@drawable/text_input_box_stroke"
                    app:hintTextColor="@color/colorAccent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editCreateAmout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLines="1"
                        android:hint="@string/example_create_amout" />
                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>


        </LinearLayout>

            <TextView
                android:id="@+id/createAmout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/colorPrimary"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:text="@string/next_button"
                android:textColor="@color/colorBackgrndFrg"
                android:textSize="16sp" />

        </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>