<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateTaskPlace">

    <View
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/gradient_back_180"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.core.widget.NestedScrollView
        android:clipToPadding="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextLight"
                android:paddingTop="8dp"
                android:layout_margin="8dp"
                android:gravity="center"
                android:textSize="18sp"
                android:text="@string/step_2_5_title"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryGrey"

                android:gravity="center"
                android:text="@string/step_2_5"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/createPlace_buttonleft"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:elevation="1dp"
                    android:textColor="@color/colorBackgrndFrg"
                    android:text="@string/get_place"
                    android:background="@drawable/circle_button_left_solid"/>

                <TextView
                    android:id="@+id/createPlace_buttonright"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:elevation="1dp"
                    android:paddingEnd="8dp"
                    android:textColor="@color/colorAccent"
                    android:text="@string/example_athome"
                    android:background="@drawable/circle_button_right"/>

            </LinearLayout>



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                android:id="@+id/text_far"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center"
                android:text="@string/create_far_task"
                android:textSize="14sp"
                />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <EditText
                        android:id="@+id/suggest_query"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/example_place" />



                    <androidx.recyclerview.widget.RecyclerView
                        android:clipToPadding="false"
                        android:id="@+id/suggest_result"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="invisible" />


                </LinearLayout>

            </RelativeLayout>

            <TextView
                android:id="@+id/createPlace"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/colorPrimary"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:text="@string/next_button"
                android:textColor="@color/colorBackgrndFrg"
                android:textSize="16sp" />

    </LinearLayout>



        </androidx.cardview.widget.CardView>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>