<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateTaskTerm">

    <View
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/gradient_back_180"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_margin="16dp"
        android:layout_gravity="center"
        android:layout_height="match_parent"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextLight"
                android:layout_margin="8dp"
                android:gravity="center"
                android:textSize="18sp"
                android:text="@string/step_3_5_title"/>

            <TextView
                android:id="@+id/textstep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryGrey"
                android:gravity="center"
                android:text="@string/step_3_5"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/createTerm_buttonleft"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:elevation="1dp"
                    android:textColor="@color/colorTextGrad"
                    android:text="@string/dogovorus"
                    android:textSize="14sp"
                    android:maxLines="2"
                    android:background="@drawable/circle_button_left"/>

                <TextView
                    android:id="@+id/createTerm_buttoncenter"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:elevation="1dp"
                    android:textColor="@color/colorBackgrndFrg"
                    android:text="@string/period"
                    android:textSize="14sp"
                    android:background="@drawable/circle_button_center_solid"/>

                <TextView
                    android:id="@+id/createTerm_buttonright"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:elevation="1dp"
                    android:paddingEnd="8dp"
                    android:textColor="@color/colorTextGrad"
                    android:text="@string/truedate"
                    android:textSize="14sp"
                    android:background="@drawable/circle_button_right"/>

            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryGrey"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                android:id="@+id/createTerm_textisp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/example_term_textisp"
                android:textColor="@color/colorBackground"
                android:padding="8dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
            <LinearLayout
                android:id="@+id/layout_term_text_from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/circle_shape_intro_blue_5corner"
                android:layout_margin="8dp"
                android:gravity="center"
                android:padding="8dp"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/term_text_from"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/colorBackgrndFrg"
                    android:text="@string/example_term_text_from"/>

                <TextView
                    android:id="@+id/term_text_from_date"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="end|center_vertical"
                    android:textColor="@color/colorBackgrndFrg"
                    android:text="--.--.--"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_term_text_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/circle_shape_intro_blue_5corner_stroke"
                android:layout_margin="8dp"
                android:gravity="center"
                android:padding="8dp"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/term_text_to"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/colorTextGrad"

                    android:text="@string/example_term_text_to"/>

                <TextView
                    android:id="@+id/term_text_to_date"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="end|center_vertical"
                    android:textColor="@color/colorTextGrad"
                    android:text="--.--.--"/>

            </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/layout_term_onedate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/circle_shape_intro_blue_5corner"
                        android:layout_margin="8dp"
                        android:gravity="center"
                        android:padding="8dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/term_text_onedate"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:gravity="center_vertical"
                            android:textColor="@color/colorBackgrndFrg"
                            android:text="@string/example_term_choosedate"/>

                        <TextView
                            android:id="@+id/term_text_one_date"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:gravity="end|center_vertical"
                            android:textColor="@color/colorBackgrndFrg"
                            android:text="--.--.--"/>

                    </LinearLayout>
                    <Spinner
                        android:id="@+id/spinner_term"
                        android:layout_width="match_parent"
                        android:entries="@array/datecreatelist"
                        android:background="@drawable/circle_shape_intro_blue_5corner_stroke"
                        android:layout_height="60dp"
                        android:layout_margin="8dp"/>
                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>
        <TextView
            android:id="@+id/createTerm"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorPrimary"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:text="@string/next_button"
            android:textColor="@color/colorBackgrndFrg"
            android:textSize="16sp" />
    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>